added image and key event handling, first attempt for jlink images creation