@@ -21,10 +21,26 @@
       <artifactId>io.artoo.fxcalibur</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-core</artifactId>
-    </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.5</version>
+        <configuration>
+          <mainClass>io.artoo.honolulu/io.artoo.honolulu.Main</mainClass>
+          <stripDebug>true</stripDebug>
+          <compress>2</compress>
+          <noHeaderFiles>true</noHeaderFiles>
+          <noManPages>true</noManPages>
+          <launcher>honolulu</launcher>
+          <options>--enable-preview</options>
+          <jlinkImageName>honolulu</jlinkImageName>
+          <jlinkZipName>honolulu</jlinkZipName>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
